syntax = "proto3";

package api.auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "user.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Dnlbb/auth/pkg/auth_v1;auth_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Auth API"
        version: "1.0.0"
        contact: {
            name: "Daniil"
        };
    };

    host:"localhost:8080",
    schemes:HTTP,
    consumes:"application/json",
    produces:"application/json",
};

service Auth {
    rpc Create(CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
            post: "/auth/create"
            body: "*"
        };
    }

    rpc Get(GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            get: "/auth/get"
        };
    }

    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/auth/update"
            body: "*"
        };
    }

    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/auth/delete"
        };
    }
}

message CreateRequest {
    User user = 1;
    string password = 2 [(validate.rules).string = {min_len: 1, max_len: 255}];
    string password_confirm = 3 [(validate.rules).string = {min_len: 1, max_len: 255}];
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    oneof nameOrId {
        option (validate.required) = true;
        int64 id = 1;
        string username = 2 [(validate.rules).string = {ignore_empty: true, min_len: 1, max_len: 255}];
    }
}

message GetResponse {
    int64 id = 1;
    User user = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message UpdateRequest {
    int64 id = 1;
    google.protobuf.StringValue name = 2 [(validate.rules).string = {ignore_empty: true, min_len: 1, max_len: 255}];
    google.protobuf.StringValue email = 3 [(validate.rules).string.email = true, (validate.rules).string.ignore_empty = true];
    Role role = 4;
}

message DeleteRequest {
    int64 id = 1;
}


